patch: add dockerfile && env example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,46 @@
+# How to use this config:
+# - Copy it into a file called ".env" and
+#   plug in your required variables.
+
+# - Uncommented variables are required, and
+#   the application will not run without them.
+# - Commented variables are optional, but you
+#   most likely need to uncomment & fill them.
+# - The filled values in the commented variables
+#   are the default ones used by this app.
+
+##################################################
+
+#                      MQTT
+
+##################################################
+
 MQTT_HOST=
-MQTT_PORT=
-MQTT_CLIENTID=
+#MQTT_USERNAME=
+#MQTT_PASSWORD=
+#MQTT_PORT=1883
+#MQTT_CLIENTID=
+#MQTT_SUBSCRIPTIONS=#
 
-AWS_REGION=
-AWS_KINESIS_STREAM_ARN=
-AWS_ACCESS_KEY=
-AWS_SECRET_ACCESS_KEY=
+##################################################
 
-APP_LOGGING_LEVEL=
+#                      AWS
+
+##################################################
+
+AWS_KINESIS_STREAM_ARN=your-stream-arn-here
+
+#AWS_REGION=eu-west-1
+
+#NOT RECOMMENDED, MAKE SURE YOU KNOW WHAT YOU ARE DOING IF YOU PASS CREDENTIALS THIS WAY.
+#https://docs.aws.amazon.com/sdk-for-java/v1/developer-guide/credentials.html
+#AWS_ACCESS_KEY=
+#AWS_SECRET_ACCESS_KEY=
+
+##################################################
+
+#                      OTHER
+
+##################################################
+
+#APP_LOGGING_LEVEL=INFO
