--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,7 @@
+# DO NOT MODIFY THESE PROPERTIES UNLESS YOU
+# KNOW WHAT YOU ARE DOING.
+# USE ENVIRONMENT VARIABLES
+
 mqtt.username=${MQTT_USERNAME:}
 mqtt.password=${MQTT_PASSWORD:}
 mqtt.host=test.mosquitto.org
@@ -6,6 +10,7 @@ mqtt.clientid=${MQTT_CLIENTID:}
 mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:abc/1234,bca/#,test/#}
 
 aws.region=${AWS_REGION:eu-west-1}
+aws.kinesis.partitioning-strategy=${AWS_KINESIS_PARTITIONING_STRATEGY:PAYLOAD_HASH}
 aws.kinesis.stream.arn=crap
 aws.access.key=idk
 aws.access.key.secret=idk
