--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ MQTT_HOST=
 
 AWS_KINESIS_STREAM_ARN=your-stream-arn-here
 
+#AWS_KINESIS_PARTITIONING_STRATEGY=PAYLOAD_HASH
 #AWS_REGION=eu-west-1
 
 #NOT RECOMMENDED, MAKE SURE YOU KNOW WHAT YOU ARE DOING IF YOU PASS CREDENTIALS THIS WAY.
