--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# DO NOT MODIFY THESE PROPERTIES UNLESS YOU
+# KNOW WHAT YOU ARE DOING.
+# USE ENVIRONMENT VARIABLES
+
 mqtt.username=${MQTT_USERNAME:}
 mqtt.password=${MQTT_PASSWORD:}
 mqtt.host=${MQTT_HOST}
@@ -6,6 +10,7 @@ mqtt.clientid=${MQTT_CLIENTID:}
 mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:#}
 
 aws.region=${AWS_REGION:eu-west-1}
+aws.kinesis.partitioning-strategy=${AWS_KINESIS_PARTITIONING_STRATEGY:PAYLOAD_HASH}
 aws.kinesis.stream.arn=${AWS_KINESIS_STREAM_ARN}
 aws.access.key=${AWS_ACCESS_KEY:}
 aws.access.key.secret=${AWS_SECRET_ACCESS_KEY:}
