--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,7 +6,7 @@ mqtt.username=${MQTT_USERNAME:}
 mqtt.password=${MQTT_PASSWORD:}
 mqtt.host=test.mosquitto.org
 mqtt.port=${MQTT_PORT:1883}
-mqtt.clientid=${MQTT_CLIENTID:m2k4k}
+mqtt.clientid=${MQTT_CLIENTID:M2K4j}
 mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:abc/1234,bca/#,test/#}
 
 aws.region=${AWS_REGION:eu-west-1}
