--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ MQTT_HOST=
 #MQTT_PASSWORD=
 #MQTT_PORT=1883
 #MQTT_CLIENTID=
-#MQTT_SUBSCRIPTIONS=#
+#MQTT_SUBSCRIPTIONS=# (supports a comma separated list, like "abc/#, lol/1342, N/#")
 
 ##################################################
 
