patch: add link to JSON ptr expression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@
 
 mqtt.username=${MQTT_USERNAME:}
 mqtt.password=${MQTT_PASSWORD:}
-mqtt.host=${MQTT_HOST}
+mqtt.host=test.mosquitto.org
 mqtt.port=${MQTT_PORT:1883}
 mqtt.clientid=${MQTT_CLIENTID:M2K4j}
 mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:#}
 
 aws.region=${AWS_REGION:eu-west-1}
 aws.kinesis.partitioning-strategy=${AWS_KINESIS_PARTITIONING_STRATEGY:PAYLOAD_HASH}
-aws.kinesis.stream.arn=${AWS_KINESIS_STREAM_ARN}
+aws.kinesis.stream.arn=crap
 aws.access.key=${AWS_ACCESS_KEY:}
 aws.access.key.secret=${AWS_SECRET_ACCESS_KEY:}
 
