patch: fix kover workflow #2

--- a/.github/workflows/kover.yml
+++ b/.github/workflows/kover.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/m2k4j/build/reports/kover/report.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_FOR_KOVER }}
           title: Code Coverage
           update-comment: true
           min-coverage-overall: 80
