--- a/.github/workflows/kover.yml
+++ b/.github/workflows/kover.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: corretto
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
       - name: Generate kover coverage report
