patch: add test with trace step to understand why spring app tests not working

--- a/.github/workflows/kover.yml
+++ b/.github/workflows/kover.yml
@@ -17,6 +17,8 @@ jobs:
           distribution: corretto
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Test build with trace
+        run: ./gradlew build --stacktrace
       - name: Generate kover coverage report
         run: ./gradlew koverXmlReport
 
