--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,7 +11,7 @@ mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:abc/1234,bca/#,test/#}
 
 aws.region=${AWS_REGION:eu-west-1}
 aws.kinesis.partitioning-strategy=${AWS_KINESIS_PARTITIONING_STRATEGY:PAYLOAD_HASH}
-aws.kinesis.stream.arn=test
+aws.kinesis.stream.name=test
 aws.access.key=test
 aws.access.key.secret=test
 
