--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ mqtt.subscriptions=${MQTT_SUBSCRIPTIONS:#}
 
 aws.region=${AWS_REGION:eu-west-1}
 aws.kinesis.partitioning-strategy=${AWS_KINESIS_PARTITIONING_STRATEGY:PAYLOAD_HASH}
-aws.kinesis.stream.arn=${AWS_KINESIS_STREAM_ARN}
+aws.kinesis.stream.name=${AWS_KINESIS_STREAM_NAME}
 aws.access.key=${AWS_ACCESS_KEY:}
 aws.access.key.secret=${AWS_SECRET_ACCESS_KEY:}
 
